Completamos el diseño inicial css y añadimos el script al código.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <form action="">
                 <div class="formItem">
                     <label for="name">Enter your name: </label>
+                    <input type="text" name="nick" value="@" id="nicka" readonly>
                     <input type="text" name="nick" id="nick">
                 </div>
                 <div class="formItem">
@@ -45,6 +46,9 @@
         <footer>
             <p>Curso FrontEnd, Css y JS.</p>
         </footer>
+        
+        <!-- JAVASCRIPT. -->
+        <script src="./js/formValidations.js"></script> 
     </body>
 
 </html>
