Mostrar mensaje de error personalizado, en HTML, en caso de que la validación falle.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- FORMULARIO DE USUARIO. -->
             <main>
                 <div id="errorPanel">
-                    <p>Prueba de mensaje de error.</p>
+                    <p id="errorMsg"></p>
                 </div>
                 <form action="#" id="form">
                     <div class="formItem">
@@ -34,7 +34,7 @@
                     <div class="formItem">
                         <label for="size">Tamaño del juego. </label>
                         <select name="size" id="size">
-                            <option value="">--Por favor, elige un tamaño.--</option>
+                            <option value="0">--Por favor, elige un tamaño.--</option>
                             <option value="1">4x4</option>
                             <option value="2">5x5</option>
                             <option value="3">6x6</option>
