--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <title>Masterdots game</title>
     </head>
 
-    <body>
-        <div class="container">
+    <body class="flexCenter">
+        <div class="container flexCenter">
             <!-- CABECERA -->
             <header>
                 <img src="./resources/logo-mastermind.png" alt="Logo Masterdots.">
@@ -25,13 +25,19 @@
                 <div id="errorPanel">
                     <p id="errorMsg"></p>
                 </div>
-                <form action="#" id="form">
-                    <div class="formItem">
+                <form action="#" class="flexColumn" id="form">
+                    <div class="flexColumn">
                         <label for="name">Enter your name: </label>
-                        <input type="text" name="nick" value="@" id="nicka" readonly>
-                        <input type="text" name="nick" id="nick">
+                        <div id="nickUser">
+                            <input type="text" name="nick" value="@" id="nickAt" readonly>
+                            <input type="text" name="nick" id="nick">
+                        </div>
                     </div>
-                    <div class="formItem">
+                    <div class="flexColumn">
+                        <label for="email">Enter your email: </label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="flexColumn">
                         <label for="size">Tamaño del juego. </label>
                         <select name="size" id="size">
                             <option value="0">--Por favor, elige un tamaño.--</option>
@@ -40,7 +46,7 @@
                             <option value="3">6x6</option>
                         </select>
                     </div>
-                    <div class="formItem">
+                    <div class="flexColumn">
                         <input type="submit" value="PLAY" id="playBtn">
                     </div>
                 </form>
