Inclusion de la validación del campo email en el formulario mediante JS.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         </div>
                     </div>
                     <div class="flexColumn">
-                        <label for="email">Enter your email: </label>
-                        <input type="email" name="email" id="email">
+                        <label for="text">Enter your email: </label>
+                        <input type="text" name="email" id="email">
                     </div>
                     <div class="flexColumn">
                         <label for="size">Tamaño del juego. </label>
