Se incorporan los mecanismos para poder llevar datos entre las ventanas de la applicacion.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="errorPanel">
                     <p id="errorMsg"></p>
                 </div>
-                <form action="#" class="flexColumn" id="form">
+                <form action="./game.html" class="flexColumn" id="form">
                     <div class="flexColumn">
                         <label for="name">Enter your name: </label>
                         <div id="nickUser">
@@ -61,6 +61,7 @@
         
         <!-- JAVASCRIPT. -->
         <script src="./js/validations.js"></script>
+        <script src="./js/userData.js"></script>
 
     </body>
 
