Se modifica el método empleado para mostrar menesajes de error y se incorpora la validación del fomulario antes de cambiar de pagina web a game.html.

--- a/index.html
+++ b/index.html
@@ -1,68 +1,67 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Masterdots game</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>Masterdots game</title>
-    </head>
+  <body class="flexCenter">
+    <div class="container flexCenter">
+      <!-- CABECERA -->
+      <header>
+        <img src="./resources/logo-mastermind.png" alt="Logo Masterdots." />
+      </header>
 
-    <body class="flexCenter">
-        <div class="container flexCenter">
-            <!-- CABECERA -->
-            <header>
-                <img src="./resources/logo-mastermind.png" alt="Logo Masterdots.">
-            </header>
-
-            <!-- FORMULARIO DE USUARIO. -->
-            <main>
-                <div id="errorPanel">
-                    <p id="errorMsg"></p>
-                </div>
-                <form action="./game.html" class="flexColumn" id="form">
-                    <div class="flexColumn">
-                        <label for="name">Enter your name: </label>
-                        <div id="nickUser">
-                            <input type="text" name="nick" value="@" id="nickAt" readonly>
-                            <input type="text" name="nick" id="nick">
-                        </div>
-                    </div>
-                    <div class="flexColumn">
-                        <label for="text">Enter your email: </label>
-                        <input type="text" name="email" id="email">
-                    </div>
-                    <div class="flexColumn">
-                        <label for="size">Tamaño del juego. </label>
-                        <select name="size" id="size">
-                            <option value="0">--Por favor, elige un tamaño.--</option>
-                            <option value="1">4x4</option>
-                            <option value="2">5x5</option>
-                            <option value="3">6x6</option>
-                        </select>
-                    </div>
-                    <div class="flexColumn">
-                        <input type="submit" value="PLAY" id="playBtn">
-                    </div>
-                </form>
-            </main>
-
-            <!-- PIE DE PAGINA. -->
-            <footer>
-                <p>Curso FrontEnd, Css y JS.</p>
-            </footer>
-
+      <!-- FORMULARIO DE USUARIO. -->
+      <main>
+        <div id="errorPanel">
+          <p id="errorMsg"></p>
         </div>
-        
-        <!-- JAVASCRIPT. -->
-        <script src="./js/validations.js"></script>
-        <script src="./js/userData.js"></script>
+        <form action="./game.html" class="flexColumn" id="form">
+          <div class="flexColumn">
+            <label for="name">Enter your name: </label>
+            <div id="nickUser">
+              <input type="text" name="nick" value="@" id="nickAt" readonly />
+              <input type="text" name="nick" id="nick" />
+            </div>
+          </div>
+          <div class="flexColumn">
+            <label for="text">Enter your email: </label>
+            <input type="text" name="email" id="email" />
+          </div>
+          <div class="flexColumn">
+            <label for="size">Tamaño del juego. </label>
+            <select name="size" id="size">
+              <option value="0">--Por favor, elige un tamaño.--</option>
+              <option value="1">4x4</option>
+              <option value="2">5x5</option>
+              <option value="3">6x6</option>
+            </select>
+          </div>
+          <div class="flexColumn">
+            <input type="submit" value="PLAY" id="playBtn" />
+          </div>
+        </form>
+      </main>
 
-    </body>
+      <!-- PIE DE PAGINA. -->
+      <footer>
+        <p>Curso FrontEnd, Css y JS.</p>
+      </footer>
+    </div>
 
+    <!-- JAVASCRIPT. -->
+    <script src="./js/validations.js"></script>
+    <script src="./js/userData.js"></script>
+  </body>
 </html>
