Se incorpora la funcionalidad de drag and drop del logo del jugador.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
               <option value="3">6x6</option>
             </select>
           </div>
+          <label>Avatar:</label>
+          <div class="width350px">
+            <div class="flexRowCenter">
+              <img src="./resources/avatar1.png" id="choosenAvatar">
+              <div class="flexRowCenter" id="avatarsLayout">
+                <img src="./resources/avatar1.png" class="avatarIcon" draggable="true">
+                <img src="./resources/avatar2.png" class="avatarIcon" draggable="true">
+                <img src="./resources/avatar3.png" class="avatarIcon" draggable="true">
+                <img src="./resources/avatar4.png" class="avatarIcon" draggable="true">
+                <img src="./resources/avatar5.png" class="avatarIcon" draggable="true">
+                <img src="./resources/avatar6.png" class="avatarIcon" draggable="true">
+              </div>
+            </div>
+          </div>
           <div class="flexColumn">
             <input type="submit" value="PLAY" id="playBtn" />
           </div>
